--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap" rel="stylesheet">
-  <title>Nasa Web Scrapping</title>
+  <title>Astro Deck</title>
 </head>
 
 <body>
